# library_samuel

./: .gitignore  CMakeLists.txt  IPL_fft.h  README.md  readme.org
common/inc/: define.h
common/include/: define.h
install/: buildUI.py  setup.py  version.py
modules/: CMakeLists.txt
modules/ComputerVision/bow/: CMakeLists.txt
modules/ComputerVision/bow/inc/: bow.hpp  imageDataSet.hpp
modules/ComputerVision/bow/src/: bow.py  buildVocabulary.cpp  describeImages.cpp  imageDataSet.cpp  vocDataSet.cpp
modules/ImageProcess/: .#CMakeLists.txt  CMakeLists.txt
modules/ImageProcess/inc/: IPL_core.h  IPL_fft.h  IPL_filter.h  IPL_gradient.hpp  IPL_imageEnhancing.h  IPL_project.h  IPL_wavelet.h
modules/ImageProcess/src/: IPL_core.cpp  IPL_fft.cpp  IPL_filter.cpp  IPL_gradient.cpp  IPL_imageEnhancing.cpp  IPL_project.cpp
modules/MManage/: CMakeLists.txt
modules/MManage/inc/: MemManager.h
modules/MManage/src/: MemManager.c
modules/OCLCore/: CMakeLists.txt
modules/OCLCore/inc/: OpenCLCore.h
modules/OCLCore/src/: OpenCLCore.cpp
modules/OCLLibrary/: CMakeLists.txt
modules/OCLLibrary/inc/: fft_kernel.cl  fft_kernel.h  filter_kernel.cl  kernelInterface.h  kernelType.h  utilities_API.h  utilities_kernel.cl
modules/OCLLibrary/src/: fft_kernel.cpp  kernelInterface.cpp  utilities_API.cpp
modules/SamCore/inc/: cmdParaser.h  queue_t.hpp
modules/SamCore/src/: Time_t.c  cmdParaser.c  queue_t.cpp
modules/computerVision/: CMakeLists.txt
modules/computerVision/bow/inc/: vocDataSet.hpp
modules/computerVision/bow/src/: bow.py  bowParam.cpp  buildVocabulary.cpp  describeImages.cpp  generateCSVData.cpp  imageDataSet.cpp
modules/imageProcess/: CMakeLists.txt
modules/imageProcess/inc/: IPL_core.h  IPL_fft.h
modules/imageProcess/src/: IPL_filter.cpp  IPL_wavelet.cpp
modules/multiThread/: CMakeLists.txt
modules/multiThread/inc/: multiThread.h
modules/multiThread/src/: multiThread.c
modules/oclCore/src/: OpenCLCore.cpp
modules/oclLibrary/inc/: fft_kernel.cl  filter_kernel.cl  utilities_kernel.cl
modules/oclLibrary/src/: fft_kernel.cpp  utilities_API.cpp
modules/oglModule/: CMakeLists.txt
modules/samCore/inc/: Time_t.h  queue_t.hpp
modules/samCore/src/: MemManager.c
modules/testbed/: CMakeLists.txt
modules/testbed/test/: CMakeLists.txt
modules/testbed/test/src/: main.cpp
modules/testbed/test_ogl/: CMakeLists.txt
modules/testbed/test_ogl/src/: main.cpp
testbed/: CMakeLists.txt
testbed/test/: CMakeLists.txt
testbed/test/src/: main.cpp
testbed/test_ocl/: CMakeLists.txt
testbed/test_ocl/src/: main.cpp
testbed/test_ogl/src/: main.cpp
